--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "firebase": "^10.8.0",
+    "immer": "^10.0.3",
     "lucide-react": "^0.335.0",
     "next": "14.1.0",
     "react": "^18",
