--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "firebase": "^10.8.0",
+    "framer-motion": "^11.0.5",
     "immer": "^10.0.3",
     "lucide-react": "^0.335.0",
     "next": "14.1.0",
