--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18",
+    "react-resizable-panels": "^2.0.11",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.1"
