--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18",
     "react-resizable-panels": "^2.0.11",
+    "react-syntax-highlighter": "^15.5.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.1"
@@ -32,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
