--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "immer": "^10.0.3",
     "lucide-react": "^0.335.0",
     "next": "14.1.0",
+    "openai": "^4.28.4",
     "react": "^18",
     "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18",
